--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,7 @@ dependencies {
     //VOLLEY
     implementation 'com.android.volley:volley:1.1.1'
 
+    //CIRCULAR_CROP
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
