--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
     //CIRCULAR_CROP
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
